fixed css to align loading spinner

--- a/src/components/files/files-table/files-table.component.scss
+++ b/src/components/files/files-table/files-table.component.scss
@@ -1,5 +1,4 @@
 .loadingSpinner {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
